:rocket: Final version of custom Databases objects